--- a/slides.tex
+++ b/slides.tex
@@ -322,7 +322,7 @@ $$
 \textbf{Edges}
 \begin{itemize}
 	\item between rows of same $c$-value
-	\item between rows of same $(v,s)$-value
+	\item between rows of same $(v,s)$-value (also in-between the tables)
 \end{itemize}
 
 \alert{Step 6:} Like Step 3
