--- a/slides.tex
+++ b/slides.tex
@@ -1,4 +1,4 @@
-\documentclass[]{beamer}
+\documentclass[aspectratio=169]{beamer}
 
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs}
@@ -107,7 +107,7 @@
 \newcommand{\DBG}{\mathrm{DBG}}
 
 \title{Research Project: A Graph Representation for Databases}
-\author{Arne Meier}
+\author{Arne Meier\\(\url{meier@thi.uni-hannover.de})}
 \date{13.6.2022}
 
 \begin{document}
@@ -118,7 +118,7 @@
 
 \begin{frame}{But, first: Ласкаво просимо!}
     \begin{center}
-    	\includegraphics[width=\linewidth]{sign-741813_1280.jpg}
+    	\includegraphics[width=.8\linewidth]{sign-741813_1280.jpg}
     \end{center}
 \end{frame}
 
@@ -346,7 +346,7 @@ $$
 
 \alert{Which e-mail addresses shall I use for invitation?}
 
-The ones on the learning agreements?\bigskip
+Send me an e-mail (\url{meier@thi.uni-hannover.de}) then I grant you access. \bigskip
 
 \alert{How often do we meet?} 
 
@@ -354,7 +354,13 @@ Bi-weekly at 14:00--15:30 (27.6., 11.7., \dots) in this room 1611.\bigskip
 
 \alert{Stud.IP}
 
-Projekt: Graph Representations for Databases
+Projekt: Graph Representations for Databases\bigskip
+
+\alert{Further Contact}
+
+Yasir Mahmood, \url{mahmood@thi.uni-hannover.de}
+
+
 \end{frame}
 
 
