--- a/slides.tex
+++ b/slides.tex
@@ -354,7 +354,7 @@ Bi-weekly at 14:00--15:30 (27.6., 11.7., \dots) in this room 1611.\bigskip
 
 \alert{Stud.IP}
 
-Projekt: Graph Representations for Databases\bigskip
+Graph Representations for Databases\bigskip
 
 \alert{Further Contact}
 
